Refactor HTML files to include common styles and structure

--- a/savory_mini_pies_project/about.html
+++ b/savory_mini_pies_project/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Savory Mini Pies</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
+
   <body>
     <header class="header">
       <h1>Savory Mini Pies</h1>
@@ -30,7 +32,7 @@
           regret it!
         </p>
       </section>
-      
+
       <section>
         <h2>Our Team</h2>
         <div class="pictures-div">
@@ -87,6 +89,29 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2>Visit Us</h2>
+        <p>
+          Stop by our bakery today and try one of our delicious savory mini pies! We are located at 123 Main Street, in the heart of the city. Our
+          bakery is open Monday through Friday from 8:00 am to 6:00 pm and Saturday from 9:00 am to 5:00 pm. We look forward to seeing you soon!
+        </p>
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131747.3231176808!2d-97.9759460588703!3d29.804872554625693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865cac5d35cfb775%3A0x652cdaedf82a9671!2sMartindale%2C%20TX%2078655%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1722459025307!5m2!1spt-BR!2sbr"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
     </main>
+
+    <footer>
+        <p>&copy; 2024 Savory Mini Pies</p>
+    </footer>
   </body>
 </html>
