--- a/savory_mini_pies_project/index.html
+++ b/savory_mini_pies_project/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Savory Mini Pies</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
   <body>
     <header class="header">
@@ -28,5 +29,8 @@
         </p>
       </section>
     </main>
+    <footer class="short-content-footer">
+      <p>&copy; 2024 Savory Mini Pies</p>
+    </footer>
   </body>
 </html>
