--- a/savory_mini_pies_project/menu.html
+++ b/savory_mini_pies_project/menu.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Savory Mini Pies</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
   <body>
     <header>
