Added Menu HTML and CSS

--- a/savory_mini_pies_project/about.html
+++ b/savory_mini_pies_project/about.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Savory Mini Pies</title>
-    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
 
@@ -90,13 +93,11 @@
         </ul>
       </section>
 
-      <section>
-        
-      </section>
+      <section></section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Savory Mini Pies</p>
+    <footer >
+      <p><a href="#">&copy; 2024 Savory Mini Pies</a></p>
     </footer>
   </body>
 </html>
