--- a/savory_mini_pies_project/index.html
+++ b/savory_mini_pies_project/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Savory Mini Pies</title>
-    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
+
   <body>
     <header class="header">
       <h1>Savory Mini Pies</h1>
@@ -28,9 +32,21 @@
           our flavors.
         </p>
       </section>
+
+      <section>
+        <div class="picture-div-main">
+          <img src="./images/mini-pie-1.jpg" alt="mini-pie-1" />
+          <img src="./images/mini-pie-2.jpg" alt="mini-pie-2" />
+        </div>
+        <p class="check-menu">Make sure to check <a href="menu.html">our menu</a> and place an order today!</p>
+        <div class="picture-div-main">
+          <img src="./images/mini-pie-3.jpg" alt="mini-pie-1" />
+          <img src="./images/mini-pie-4.jpg" alt="mini-pie-2" />
+        </div>
+      </section>
     </main>
-    <footer class="short-content-footer">
-      <p>&copy; 2024 Savory Mini Pies</p>
+    <footer>
+      <p><a href="#">&copy; 2024 Savory Mini Pies</a></p>
     </footer>
   </body>
 </html>
