--- a/savory_mini_pies_project/menu.html
+++ b/savory_mini_pies_project/menu.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Savory Mini Pies</title>
-    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
+
   <body>
-    <header>
+    <header class="header">
       <h1>Savory Mini Pies</h1>
     </header>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
@@ -19,5 +23,146 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <main class="container">
+      <section>
+        <h2>Our Menu</h2>
+        <div class="menu-div">
+          <!-- Chicken -->
+          <div class="menu-item">
+            <img src="./images/mini-pie-chicken.jpg" alt="mini-pie-chicken" />
+            <h3>Chicken Savory Mini Pie - $ 5.00</h3>
+            <p>Our chicken mini pie is made with fresh chicken, carrots, peas, and a blend of spices.</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>Nutrient</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calories</td>
+                  <td>200 kcal</td>
+                </tr>
+                <tr>
+                  <td>Fat</td>
+                  <td>10g</td>
+                </tr>
+                <tr>
+                  <td>Carbohydrates</td>
+                  <td>20g</td>
+                </tr>
+                <tr>
+                  <td>Proteins</td>
+                  <td>8g</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Palmetto Heart -->
+          <div class="menu-item">
+            <img src="./images/mini-pie-palmetto-heart.jpg" alt="mini-pie-palmetto-heart" />
+            <h3>Palmetto Heart Savory Mini Pie - $ 5.00</h3>
+            <p>Our palmetto heart mini pie is made with fresh palmetto heart, onions, and a blend of spices.</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>Nutrient</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calories</td>
+                  <td>200 kcal</td>
+                </tr>
+                <tr>
+                  <td>Fat</td>
+                  <td>10g</td>
+                </tr>
+                <tr>
+                  <td>Carbohydrates</td>
+                  <td>20g</td>
+                </tr>
+                <tr>
+                  <td>Proteins</td>
+                  <td>8g</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Jerk Meat -->
+          <div class="menu-item">
+            <img src="./images/mini-pie-jerk.jpg" alt="mini-pie-jerk" />
+            <h3>Jerk Meat Savory Mini Pie - $ 5.00</h3>
+            <p>Our jerk meat mini pie is made with fresh jerk meat, onions, garlic, and a blend of spices.</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>Nutrient</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calories</td>
+                  <td>200 kcal</td>
+                </tr>
+                <tr>
+                  <td>Fat</td>
+                  <td>10g</td>
+                </tr>
+                <tr>
+                  <td>Carbohydrates</td>
+                  <td>20g</td>
+                </tr>
+                <tr>
+                  <td>Proteins</td>
+                  <td>8g</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Shrimp -->
+          <div class="menu-item">
+            <img src="./images/mini-pie-shrimp.jpg" alt="mini-pie-shrimp" />
+            <h3>Shrimp Savory Mini Pie - $ 5.00</h3>
+            <p>Our shrimp mini pie is made with fresh shrimp, onions, garlic, and a blend of spices.</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>Nutrient</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calories</td>
+                  <td>200 kcal</td>
+                </tr>
+                <tr>
+                  <td>Fat</td>
+                  <td>10g</td>
+                </tr>
+                <tr>
+                  <td>Carbohydrates</td>
+                  <td>20g</td>
+                </tr>
+                <tr>
+                  <td>Proteins</td>
+                  <td>8g</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p><a href="#">&copy; 2024 Savory Mini Pies</a></p>
+    </footer>
   </body>
 </html>
