--- a/savory_mini_pies_project/contact.html
+++ b/savory_mini_pies_project/contact.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Savory Mini Pies</title>
-    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" href="images/favicon.ico" type="image/ico" />
   </head>
+
   <body>
     <header class="header">
       <h1>Savory Mini Pies</h1>
@@ -45,8 +49,8 @@
         </div>
       </section>
     </main>
-    <footer>
-      <p>&copy; 2024 Savory Mini Pies</p>
+    <footer >
+      <p><a href="#">&copy; 2024 Savory Mini Pies</a></p>
     </footer>
   </body>
 </html>
